--- a/jupyter notes/Korol.ipynb
+++ b/jupyter notes/Korol.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -21,6 +21,10 @@
     "nltk.download(\"stopwords\")\n",
     "#--------#\n",
     "\n",
+    "import multiprocessing as mlp\n",
+    "from multiprocessing import Pool\n",
+    "from tqdm import tqdm\n",
+    " \n",
     "from nltk.corpus import stopwords\n",
     "from pymystem3 import Mystem\n",
     "from string import punctuation\n",
@@ -36,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +58,7 @@
        "'•\\tПодготовка ресторана к открытию;\\r •\\tВстреча и обслуживание гостей;\\r •\\tКонсультирование гостей об особенностях блюд и напитков; \\r •\\tСервировка столов;\\r •\\tКонтроль качества;\\r •\\tКонтроль чистоты в зале;\\r •\\tРешение конфликтных ситуаций;\\r •\\tСоставление графиков и расписания для официантов;\\r •\\tКонтроль выдачи заказа и скорости обслуживания;\\r •\\tКонтроль качества обслуживания гостей;\\r •\\tФормирование зон работы;\\r •\\tКонтроль работы персонала на смене\\r •\\tПроведение тренингов/собраний.'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +443,7 @@
        "[32165 rows x 16 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,34 +472,19 @@
     "              and token != \" \" \\\n",
     "              and token.strip() not in punctuation \\\n",
     "              and not token.strip().isdigit()]\n",
-    "    text = \" \".join(tokens)\n",
-    "    \n",
-    "    return text\n"
+    "    return tokens\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'искать активный жизнерадостный дружелюбный официант наш небольшой очень дружный сплоченный команда хватать человек требование опыт работа желательный это главный обращать внимание личный качество вежливость ответственность смотреть насколько быстро обучаться запоминать новый интерес профессия желание стараться весь время стремиться больший условие готовый научать высокий сервис рассказывать основа гастрономия барный культура психология общение гость работа коллектив график работа составление график готовый учитывать ваш пожелание заработный плата месяц различный бонус премия мало опыт предлагать программа стажировка который смочь работать неполный смена'"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "preprocess_text(df2[\"description\"][0])"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,230 +566,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_processed_corpus(texts):\n",
+    "    corpus = []\n",
+    "    for i, row in texts:\n",
+    "        corpus = preprocess_text(row[\"description\"])\n",
+    "    return corpus"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run_imap_multiprocessing(func, argument_list, num_processes):\n",
+    "\n",
+    "    pool = Pool(processes=num_processes)\n",
+    "\n",
+    "    result_list_tqdm = []\n",
+    "    for result in tqdm(pool.imap(func=func, iterable=argument_list), total=len(argument_list)):\n",
+    "        result_list_tqdm.append(result)\n",
+    "\n",
+    "    return result_list_tqdm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# n_proc = 2\n",
+    "# pool = mlp.Pool(n_proc)\n",
+    "# textss = list(tqdm(pool.imap(get_processed_corpus, df2[\"description\"]), total=len(df2)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>NaN</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NaN</th>\n",
-       "      <td>ВАКАНСИИ</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NaN</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NaN</th>\n",
-       "      <td>название поля</td>\n",
-       "      <td>описание поля</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NaN</th>\n",
-       "      <td>id</td>\n",
-       "      <td>ID</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NaN</th>\n",
-       "      <td>name</td>\n",
-       "      <td>Название вакансии</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NaN</th>\n",
-       "      <td>area.name</td>\n",
-       "      <td>Регион</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NaN</th>\n",
-       "      <td>city</td>\n",
-       "      <td>Город</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NaN</th>\n",
-       "      <td>company.id</td>\n",
-       "      <td>ID компании</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NaN</th>\n",
-       "      <td>company</td>\n",
-       "      <td>Название компании</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NaN</th>\n",
-       "      <td>company_link</td>\n",
-       "      <td>Ссылка на профиль компании в hh</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NaN</th>\n",
-       "      <td>publication_date</td>\n",
-       "      <td>Дата публикации</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NaN</th>\n",
-       "      <td>salary_from</td>\n",
-       "      <td>Зарплата от</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NaN</th>\n",
-       "      <td>salary_currency</td>\n",
-       "      <td>Валюта (рубли)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NaN</th>\n",
-       "      <td>employment.name</td>\n",
-       "      <td>Тип занятости (название)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NaN</th>\n",
-       "      <td>schedule.name</td>\n",
-       "      <td>Тип графика (название)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NaN</th>\n",
-       "      <td>experience.name</td>\n",
-       "      <td>Опыт (название)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NaN</th>\n",
-       "      <td>key_skills</td>\n",
-       "      <td>Ключевые навыки (для вакансии)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NaN</th>\n",
-       "      <td>specializations</td>\n",
-       "      <td>Специализация - теги (коды)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NaN</th>\n",
-       "      <td>description</td>\n",
-       "      <td>Описание вакансии</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NaN</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NaN</th>\n",
-       "      <td>РЕЗЮМЕ</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NaN</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NaN</th>\n",
-       "      <td>uuid</td>\n",
-       "      <td>ID пользователя</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NaN</th>\n",
-       "      <td>position</td>\n",
-       "      <td>Название позиции в организации</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NaN</th>\n",
-       "      <td>organization</td>\n",
-       "      <td>Название организации</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NaN</th>\n",
-       "      <td>description</td>\n",
-       "      <td>Описание работы</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NaN</th>\n",
-       "      <td>start</td>\n",
-       "      <td>Начало работы (месяц)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NaN</th>\n",
-       "      <td>end</td>\n",
-       "      <td>Конец работы (месяц)</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                    1                                2\n",
-       "0                                                     \n",
-       "NaN               NaN                              NaN\n",
-       "NaN          ВАКАНСИИ                              NaN\n",
-       "NaN               NaN                              NaN\n",
-       "NaN     название поля                    описание поля\n",
-       "NaN                id                               ID\n",
-       "NaN              name                Название вакансии\n",
-       "NaN         area.name                           Регион\n",
-       "NaN              city                            Город\n",
-       "NaN        company.id                      ID компании\n",
-       "NaN           company                Название компании\n",
-       "NaN      company_link  Ссылка на профиль компании в hh\n",
-       "NaN  publication_date                  Дата публикации\n",
-       "NaN       salary_from                      Зарплата от\n",
-       "NaN   salary_currency                   Валюта (рубли)\n",
-       "NaN   employment.name         Тип занятости (название)\n",
-       "NaN     schedule.name           Тип графика (название)\n",
-       "NaN   experience.name                  Опыт (название)\n",
-       "NaN        key_skills   Ключевые навыки (для вакансии)\n",
-       "NaN   specializations      Специализация - теги (коды)\n",
-       "NaN       description                Описание вакансии\n",
-       "NaN               NaN                              NaN\n",
-       "NaN            РЕЗЮМЕ                              NaN\n",
-       "NaN               NaN                              NaN\n",
-       "NaN              uuid                  ID пользователя\n",
-       "NaN          position   Название позиции в организации\n",
-       "NaN      organization             Название организации\n",
-       "NaN       description                  Описание работы\n",
-       "NaN             start            Начало работы (месяц)\n",
-       "NaN               end             Конец работы (месяц)"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|                                                                                            | 0/2 [00:00<?, ?it/s]"
+     ]
     }
    ],
    "source": [
-    "desc"
+    "run_imap_multiprocessing(get_processed_corpus, df2[\"description\"].sample(100), 2)"
    ]
   },
   {
