--- a/jupyter notes/Korol.ipynb
+++ b/jupyter notes/Korol.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,22 +49,206 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>uuid</th>\n",
+       "      <th>position</th>\n",
+       "      <th>organization</th>\n",
+       "      <th>description</th>\n",
+       "      <th>start</th>\n",
+       "      <th>end</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>e08588cc-4ad1-45be-ae95-fa3fd31bc32e</td>\n",
+       "      <td>заведующая кафе-кладовщик</td>\n",
+       "      <td>ООО Мираж</td>\n",
+       "      <td>Составление ттк\\r Проведение инвентаризаций\\r ...</td>\n",
+       "      <td>2012-04</td>\n",
+       "      <td>2012-11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>36c13102-4a62-477b-a475-f9a5b1c48218</td>\n",
+       "      <td>Заведующий складом</td>\n",
+       "      <td>Оконный завод</td>\n",
+       "      <td>руководство складом и цехом по производству ко...</td>\n",
+       "      <td>2014-02</td>\n",
+       "      <td>2015-09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>36c13102-4a62-477b-a475-f9a5b1c48218</td>\n",
+       "      <td>старший кладовщик</td>\n",
+       "      <td>ООО \" Керамика сервис\"</td>\n",
+       "      <td>Полное ведение складского учета отдельно стоящ...</td>\n",
+       "      <td>2012-03</td>\n",
+       "      <td>2013-06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>36c13102-4a62-477b-a475-f9a5b1c48218</td>\n",
+       "      <td>бухгалтер складского учета</td>\n",
+       "      <td>Многопрофильный холдинг \"Вероника\" СПБ</td>\n",
+       "      <td>Cклад, бухгалтер по учету ТМЦ и ОС, проведение...</td>\n",
+       "      <td>2010-12</td>\n",
+       "      <td>2011-05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>85bfe532-1108-4142-bae5-29818bfc70a0</td>\n",
+       "      <td>Старший официант</td>\n",
+       "      <td>ДВЕ ПАЛОЧКИ, сеть ресторанов свободного полета</td>\n",
+       "      <td>•\\tПодготовка ресторана к открытию;\\r •\\tВстре...</td>\n",
+       "      <td>2008-12</td>\n",
+       "      <td>2011-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99995</th>\n",
+       "      <td>df2f6158-c03b-4545-a4c5-e5bf80fd5a5b</td>\n",
+       "      <td>Администратор ресторана</td>\n",
+       "      <td>Евразия, сеть ресторанов и суши-баров</td>\n",
+       "      <td>Контроль работы ресторана</td>\n",
+       "      <td>2014-06</td>\n",
+       "      <td>2014-12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99996</th>\n",
+       "      <td>df2f6158-c03b-4545-a4c5-e5bf80fd5a5b</td>\n",
+       "      <td>Официант</td>\n",
+       "      <td>jazz bar 48 chairs</td>\n",
+       "      <td>Обслуживание гостей по всем европейским станда...</td>\n",
+       "      <td>2011-06</td>\n",
+       "      <td>2014-06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99997</th>\n",
+       "      <td>df2f6158-c03b-4545-a4c5-e5bf80fd5a5b</td>\n",
+       "      <td>Суши-повар, официант, администратор</td>\n",
+       "      <td>ООО Страйк</td>\n",
+       "      <td>На поседней должности-контроль работы ресторана.</td>\n",
+       "      <td>2007-04</td>\n",
+       "      <td>2011-05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99998</th>\n",
+       "      <td>7b0b9de2-d04c-42d5-a59d-6808b5abef8a</td>\n",
+       "      <td>Член бригады ресторана</td>\n",
+       "      <td>Макдоналдс</td>\n",
+       "      <td>Кассир, повар, грузчик.</td>\n",
+       "      <td>2013-10</td>\n",
+       "      <td>2014-11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99999</th>\n",
+       "      <td>0d63755e-04bc-43de-a981-65584b1ff7c6</td>\n",
+       "      <td>Сменный начальник перегрузочно-складского комп...</td>\n",
+       "      <td>ОАО \"БСМЗ\"</td>\n",
+       "      <td>В обязанности входит полный спектр портовых ра...</td>\n",
+       "      <td>2010-05</td>\n",
+       "      <td>2012-02</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100000 rows × 6 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "'•\\tПодготовка ресторана к открытию;\\r •\\tВстреча и обслуживание гостей;\\r •\\tКонсультирование гостей об особенностях блюд и напитков; \\r •\\tСервировка столов;\\r •\\tКонтроль качества;\\r •\\tКонтроль чистоты в зале;\\r •\\tРешение конфликтных ситуаций;\\r •\\tСоставление графиков и расписания для официантов;\\r •\\tКонтроль выдачи заказа и скорости обслуживания;\\r •\\tКонтроль качества обслуживания гостей;\\r •\\tФормирование зон работы;\\r •\\tКонтроль работы персонала на смене\\r •\\tПроведение тренингов/собраний.'"
+       "                                       uuid  \\\n",
+       "0      e08588cc-4ad1-45be-ae95-fa3fd31bc32e   \n",
+       "1      36c13102-4a62-477b-a475-f9a5b1c48218   \n",
+       "2      36c13102-4a62-477b-a475-f9a5b1c48218   \n",
+       "3      36c13102-4a62-477b-a475-f9a5b1c48218   \n",
+       "4      85bfe532-1108-4142-bae5-29818bfc70a0   \n",
+       "...                                     ...   \n",
+       "99995  df2f6158-c03b-4545-a4c5-e5bf80fd5a5b   \n",
+       "99996  df2f6158-c03b-4545-a4c5-e5bf80fd5a5b   \n",
+       "99997  df2f6158-c03b-4545-a4c5-e5bf80fd5a5b   \n",
+       "99998  7b0b9de2-d04c-42d5-a59d-6808b5abef8a   \n",
+       "99999  0d63755e-04bc-43de-a981-65584b1ff7c6   \n",
+       "\n",
+       "                                                position  \\\n",
+       "0                              заведующая кафе-кладовщик   \n",
+       "1                                     Заведующий складом   \n",
+       "2                                      старший кладовщик   \n",
+       "3                             бухгалтер складского учета   \n",
+       "4                                       Старший официант   \n",
+       "...                                                  ...   \n",
+       "99995                            Администратор ресторана   \n",
+       "99996                                           Официант   \n",
+       "99997                Суши-повар, официант, администратор   \n",
+       "99998                             Член бригады ресторана   \n",
+       "99999  Сменный начальник перегрузочно-складского комп...   \n",
+       "\n",
+       "                                         organization  \\\n",
+       "0                                           ООО Мираж   \n",
+       "1                                       Оконный завод   \n",
+       "2                              ООО \" Керамика сервис\"   \n",
+       "3              Многопрофильный холдинг \"Вероника\" СПБ   \n",
+       "4      ДВЕ ПАЛОЧКИ, сеть ресторанов свободного полета   \n",
+       "...                                               ...   \n",
+       "99995           Евразия, сеть ресторанов и суши-баров   \n",
+       "99996                              jazz bar 48 chairs   \n",
+       "99997                                      ООО Страйк   \n",
+       "99998                                      Макдоналдс   \n",
+       "99999                                      ОАО \"БСМЗ\"   \n",
+       "\n",
+       "                                             description    start      end  \n",
+       "0      Составление ттк\\r Проведение инвентаризаций\\r ...  2012-04  2012-11  \n",
+       "1      руководство складом и цехом по производству ко...  2014-02  2015-09  \n",
+       "2      Полное ведение складского учета отдельно стоящ...  2012-03  2013-06  \n",
+       "3      Cклад, бухгалтер по учету ТМЦ и ОС, проведение...  2010-12  2011-05  \n",
+       "4      •\\tПодготовка ресторана к открытию;\\r •\\tВстре...  2008-12  2011-02  \n",
+       "...                                                  ...      ...      ...  \n",
+       "99995                          Контроль работы ресторана  2014-06  2014-12  \n",
+       "99996  Обслуживание гостей по всем европейским станда...  2011-06  2014-06  \n",
+       "99997   На поседней должности-контроль работы ресторана.  2007-04  2011-05  \n",
+       "99998                            Кассир, повар, грузчик.  2013-10  2014-11  \n",
+       "99999  В обязанности входит полный спектр портовых ра...  2010-05  2012-02  \n",
+       "\n",
+       "[100000 rows x 6 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df1.loc[4][\"description\"]"
+    "df1"
    ]
   },
   {
@@ -566,61 +750,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_processed_corpus(texts):\n",
-    "    corpus = []\n",
-    "    for i, row in texts:\n",
-    "        corpus = preprocess_text(row[\"description\"])\n",
-    "    return corpus"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def run_imap_multiprocessing(func, argument_list, num_processes):\n",
-    "\n",
-    "    pool = Pool(processes=num_processes)\n",
-    "\n",
-    "    result_list_tqdm = []\n",
-    "    for result in tqdm(pool.imap(func=func, iterable=argument_list), total=len(argument_list)):\n",
-    "        result_list_tqdm.append(result)\n",
-    "\n",
-    "    return result_list_tqdm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# n_proc = 2\n",
-    "# pool = mlp.Pool(n_proc)\n",
-    "# textss = list(tqdm(pool.imap(get_processed_corpus, df2[\"description\"]), total=len(df2)))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|                                                                                            | 0/2 [00:00<?, ?it/s]"
-     ]
-    }
-   ],
-   "source": [
-    "run_imap_multiprocessing(get_processed_corpus, df2[\"description\"].sample(100), 2)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -628,6 +761,51 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class BagOfWordCoder:\n",
+    "    vectorizer = None\n",
+    "    __init__(self, path_to_corpus):\n",
+    "        if not path_to_corpus.endswith(\".vec\"):\n",
+    "            raise Exception(f\"Need to be *.vec file\")\n",
+    "        with open(path_to_corpus) as f:\n",
+    "            vectorizer = pickle.load(f)\n",
+    "    \n",
+    "    def vectorize(self, text):\n",
+    "        return vectorizer.transform(text)\n",
+    "    \n",
+    "    def get_text(self, matrix):\n",
+    "        return le.inverse_transform(matrix)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nltk.tokenize.load()"
+   ]
   }
  ],
  "metadata": {
