--- a/jupyter notes/Korol.ipynb
+++ b/jupyter notes/Korol.ipynb
@@ -771,10 +771,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Merge made by the 'recursive' strategy.\n",
+      " hacktrud/hack/__pycache__/__init__.cpython-38.pyc  | Bin 0 -> 170 bytes\n",
+      " hacktrud/hack/__pycache__/admin.cpython-38.pyc     | Bin 0 -> 211 bytes\n",
+      " hacktrud/hack/__pycache__/forms.cpython-38.pyc     | Bin 0 -> 602 bytes\n",
+      " hacktrud/hack/__pycache__/models.cpython-38.pyc    | Bin 0 -> 208 bytes\n",
+      " hacktrud/hack/__pycache__/urls.cpython-38.pyc      | Bin 0 -> 301 bytes\n",
+      " hacktrud/hack/__pycache__/views.cpython-38.pyc     | Bin 0 -> 649 bytes\n",
+      " hacktrud/hack/forms.py                             |   6 ++\n",
+      " .../migrations/__pycache__/__init__.cpython-38.pyc | Bin 0 -> 181 bytes\n",
+      " hacktrud/hack/templates/hack/base_form.html        |  79 +++++++++++++++++++++\n",
+      " hacktrud/hack/views.py                             |  11 ++-\n",
+      " .../hacktrud/__pycache__/__init__.cpython-38.pyc   | Bin 0 -> 174 bytes\n",
+      " .../hacktrud/__pycache__/settings.cpython-38.pyc   | Bin 0 -> 2326 bytes\n",
+      " hacktrud/hacktrud/__pycache__/urls.cpython-38.pyc  | Bin 0 -> 1023 bytes\n",
+      " hacktrud/hacktrud/__pycache__/wsgi.cpython-38.pyc  | Bin 0 -> 579 bytes\n",
+      " hacktrud/hacktrud/settings.py                      |   1 +\n",
+      " 15 files changed, 95 insertions(+), 2 deletions(-)\n",
+      " create mode 100644 hacktrud/hack/__pycache__/__init__.cpython-38.pyc\n",
+      " create mode 100644 hacktrud/hack/__pycache__/admin.cpython-38.pyc\n",
+      " create mode 100644 hacktrud/hack/__pycache__/forms.cpython-38.pyc\n",
+      " create mode 100644 hacktrud/hack/__pycache__/models.cpython-38.pyc\n",
+      " create mode 100644 hacktrud/hack/__pycache__/urls.cpython-38.pyc\n",
+      " create mode 100644 hacktrud/hack/__pycache__/views.cpython-38.pyc\n",
+      " create mode 100644 hacktrud/hack/forms.py\n",
+      " create mode 100644 hacktrud/hack/migrations/__pycache__/__init__.cpython-38.pyc\n",
+      " create mode 100644 hacktrud/hack/templates/hack/base_form.html\n",
+      " create mode 100644 hacktrud/hacktrud/__pycache__/__init__.cpython-38.pyc\n",
+      " create mode 100644 hacktrud/hacktrud/__pycache__/settings.cpython-38.pyc\n",
+      " create mode 100644 hacktrud/hacktrud/__pycache__/urls.cpython-38.pyc\n",
+      " create mode 100644 hacktrud/hacktrud/__pycache__/wsgi.cpython-38.pyc\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "From https://github.com/RTKML/HACKTRUDA2\n",
+      "   6350805..d0a2f7a  master     -> origin/master\n",
+      "   b687005..58b17ef  backend    -> origin/backend\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On branch master\n",
+      "Your branch is ahead of 'origin/master' by 2 commits.\n",
+      "  (use \"git push\" to publish your local commits)\n",
+      "\n",
+      "nothing to commit, working tree clean\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/RTKML/HACKTRUDA2\n",
+      "   d0a2f7a..9d465a4  master -> master\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git pull\n",
+    "!git add .\n",
+    "!git commit -m \"jup update\"\n",
+    "!git push"
+   ]
   },
   {
    "cell_type": "code",
